syntax = "proto3";
package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";

service Sports {
  // ListEvents will return a collection of all events.
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}

  // GetEvent returns a single event.
  rpc GetEvent(GetEventRequest) returns (Event) {}
}

/* Requests/Responses */

message ListEventsRequest {}

// Response to ListEvents call.
message ListEventsResponse {
  repeated Event events = 1;
}

// Request for GetEvent call.
message GetEventRequest {
  // The ID of the event to retrieve.
  int64 id = 1;
}

/* Resources */

// An event resource.
message Event {
  // ID represents a unique identifier for the event.
  int64 id = 1;
  // Name is the official name given to the event.
  string name = 2;
  // AdvertisedStartTime is the time the event is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 3;
}